2007-11-06  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser-podcast.c:
	(totem_pl_parser_add_xml_feed): Implement, fixes parsing
	of feeds from Feedburner.com (see #484768)

2007-11-05  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* lib/Makefile.am:
	* lib/asprintf.c: (totem_private_asprintf):
	* lib/totem_internal.h:
	* src/plparse/Makefile.am:
	* src/plparse/xmlparser.c: (xml_parser_get_node_internal):
	Fix compilation on Solaris, which lacks asprintf,
	based on patch by Damien Carbery <damien.carbery@sun.com>
	(Closes: #492074)

2007-11-05  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/xmllexer.c: (lexer_get_token),
	(lexer_decode_entities): Fix decoding of decimal entities,
	useful for Podcasts (see #484768)

2007-11-05  Bastien Nocera  <hadess@hadess.net>

	* configure.in: Add gnome-keyring dep as used in the xine-lib
	backend

2007-11-01  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemGMPPlugin.cpp: Implement
	totemIGMPControls::GetCurrentPosition (Helps: #364054)
	* browser-plugin/totemPlugin.cpp: Support vidheight and
	vidwidth as used by WMP (doesn't make much of a difference,
	mind you)

2007-11-01  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemGMPPlugin.cpp:
	* browser-plugin/totemGMPPlugin.h:
	* browser-plugin/totemGMPSettings.cpp:
	* browser-plugin/totemGMPSettings.h:
	Implement totemIGMPPlayer::SetURL and ::GetURL,
	and totemIGMPSettings::SetVolume and ::GetVolume
	(Helps: #364054)
	* browser-plugin/totemNarrowSpacePlugin.cpp:
	Implement totemINarrowSpace::SetVolume and ::GetVolume

2007-11-01  Bastien Nocera  <hadess@hadess.net>

	* bindings/vala/totem.vala: Fix vala bindings for the latest
	Vala (Closes: #491346)

2007-11-01  Bastien Nocera  <hadess@hadess.net>

	* data/mime-type-include.sh: Small fix to work with
	Solaris' sh, spotted by Damien Carbery <damien.carbery@sun.com>
	(Closes: #492068)

2007-11-01  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c: